--- a/training/week04/MyLocation/app/src/debug/res/values/google_maps_api.xml
+++ b/training/week04/MyLocation/app/src/debug/res/values/google_maps_api.xml
@@ -20,5 +20,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCt__G_yjjS3iTnsXKxLppvER2rJCWxkDw</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">YOUR KEY</string>
 </resources>
