--- a/training/week05/Twittos/app/src/main/res/layout/add_post_fragment_layout.xml
+++ b/training/week05/Twittos/app/src/main/res/layout/add_post_fragment_layout.xml
@@ -20,7 +20,7 @@
         app:layout_constraintBottom_toTopOf="@+id/upload_post_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/picture_imageView" />
 
     <Button
         android:id="@+id/upload_post_button"
@@ -31,4 +31,13 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/picture_imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/ic_launcher_foreground" />
 </androidx.constraintlayout.widget.ConstraintLayout>
