--- a/training/week05/Twittos/app/src/main/res/layout/post_item_layout.xml
+++ b/training/week05/Twittos/app/src/main/res/layout/post_item_layout.xml
@@ -6,11 +6,13 @@
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/dimen_8"
     app:cardBackgroundColor="#CEF4FA"
-    app:cardCornerRadius="15dp">
+    app:cardCornerRadius="15dp"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp">
 
 
         <ImageView
@@ -43,6 +45,6 @@
             android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/post_imageview" />
+            app:layout_constraintTop_toBottomOf="@+id/post_imageview"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
